# android-rust-jni-tests

./: .gitignore  README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/supercurio/androidrustjnitests/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/supercurio/androidrustjnitests/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/supercurio/androidrustjnitests/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config
rust/scripts/: build-android-libs.sh  copy-libs-to-app.sh  make-android-toolchains.sh
rust/src/: lib.rs
