[package]
name = "android-rust-jni-tests"
version = "0.1.0"
authors = ["François Simond <dev@supercur.io>"]

[dependencies]
jni = "0.5.2"
# jni = { git = 'https://github.com/supercurio/jni-rs', branch="get_object_classes-delete_local_ref" }

[target.arm-linux-androideabi.dependencies]
android_logger = "0.3.0"
log = "0.3.0"

[target.i686-linux-android.dependencies]
android_logger = "0.3.0"
log = "0.3.0"

[lib]
crate_type = ["cdylib"]
